# htracker

./: .env_example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: main.py
backend/api/: habits.py  stats.py
backend/core/: config.py  exceptions.py
backend/db/: base.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 18d0675599ac_initial.py  d97c237ba9a3_add_habit_completion_model.py
backend/models/: habit.py  user.py
backend/schemas/: habit.py  stats.py  user.py
backend/services/: auth.py  habits.py  stats.py  streak.py
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/hooks/: useAuth.js
frontend/src/pages/: LoginPage.jsx  RegisterPage.jsx
tests/: conftest.py  constants.py  factories.py  test_auth.py  test_habits.py  test_stats.py  test_streak.py
tests/e2e/: conftest.py  test_auth_e2e.py  test_dashboard_e2e.py  test_mobile_e2e.py  test_theme_e2e.py
tests/e2e/pages/: dashboard_page.py  login_page.py  register_page.py
tests/load/: README.md  locustfile.py
