[project]
name = "habit-tracker-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
"fastapi>=0.111.0",
"uvicorn[standard]>=0.29.0",
"sqlalchemy>=2.0.0",
"alembic>=1.13.0",
"psycopg2-binary>=2.9.9",
"pydantic>=2.7.0",
"pydantic-settings>=2.2.0",
"PyJWT>=2.8.0",
"bcrypt>=4.1.3",
"python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
"pytest>=8.2.0",
"pytest-asyncio>=0.23.0",
"httpx>=0.27.0",
"ruff>=0.4.0",
"black>=24.4.0",
"factory-boy>=3.3.3",
"pytest-cov>=5.0.0",
"pytest-playwright>=0.5.0",
"playwright>=1.44.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "tests*"]

[tool.black]
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "focus: for test that is the focus of the session",
    "auth: tests related to auth route",
    "habits: tests related to habits route",
    "streaks: tests related to the streaks service",
    "stats: tests related to stats service",
    "e2e: end-to-end browser tests",
]
